- gauge title alignment and text cutoff fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1187,14 +1187,13 @@ map-bottom-toggle.filters {
 .gauge-title {
   position: absolute;
   white-space: nowrap;
-  margin-left: 0px;
+  margin-left: 4px;
   margin-top: 4px;
-  left: 3px;
   top: 0px;
 
   &.withoutchart {
     left: -6px;
-    top:$nav-height;
+    top:$nav-height+1;
   }
   &.no-margin {
     margin-top: 0px;
